# Email_AutoMation_Agent

./: Book1.csv  README.md  pyproject.toml  report.md  requirements.txt
output/: email_body.txt  report.json  report.md  report.txt  report_short.txt  research.txt
src/automation/: crew.py  email_body_display.py  log_in.py  main.py
src/automation/config/: agents.yaml  tasks.yaml
src/automation/tools/: email.py
