[project]
name = "automation"
version = "0.1.0"
description = "automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
automation = "automation.main:run"
run_crew = "automation.main:run"
train = "automation.main:train"
replay = "automation.main:replay"
test = "automation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
